@@ -20,15 +20,15 @@ public class ArithmeticAlgorithmsTest {
 
     @Test
     public void test_that_can_find_min_index() {
-        assertEquals("Incorrect index of the minimum element.", new Integer(3), minIndex(2, 1, 1, 0, 2, 0));
-        assertEquals("Incorrect index of the minimum element.", new Integer(0), minIndex(-1, 1, 1, 0, 2, 0));
-        assertEquals("Incorrect index of the minimum element.", new Integer(5), minIndex(3, 1, 1, 5, 2, 0));
+        assertEquals("Incorrect index of the minimum element.", Integer.valueOf(3), minIndex(2, 1, 1, 0, 2, 0));
+        assertEquals("Incorrect index of the minimum element.", Integer.valueOf(0), minIndex(-1, 1, 1, 0, 2, 0));
+        assertEquals("Incorrect index of the minimum element.", Integer.valueOf(5), minIndex(3, 1, 1, 5, 2, 0));
     }
 
     @Test
     public void test_that_min_index_behavious_correctly_under_when_null_is_passed() {
         try {
-            minIndex(null);
+            minIndex((Integer[]) null);
             fail("An IllegalArgumentException is expected.");
         } catch (final IllegalArgumentException ex) {
 
@@ -56,10 +56,10 @@ public class ArithmeticAlgorithmsTest {
 
     @Test
     public void test_lcm() {
-        assertEquals("Incorrect LCM.", new Integer(60), lcm(10, 20, 60));
-        assertEquals("Incorrect LCM.", new Integer(100), lcm(10, 20, 50));
-        assertEquals("Incorrect LCM.", new Integer(10), lcm(10, 10, 10));
-        assertEquals("Incorrect LCM.", new Integer(700), lcm(10, 20, 50, 70));
+        assertEquals("Incorrect LCM.", Integer.valueOf(60), lcm(10, 20, 60));
+        assertEquals("Incorrect LCM.", Integer.valueOf(100), lcm(10, 20, 50));
+        assertEquals("Incorrect LCM.", Integer.valueOf(10), lcm(10, 10, 10));
+        assertEquals("Incorrect LCM.", Integer.valueOf(700), lcm(10, 20, 50, 70));
     }
 
 }
