@@ -1,5 +1,6 @@
 package ua.com.fielden.platform.entity;
 
+import com.google.inject.AbstractModule;
 import com.google.inject.Injector;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.junit.Before;
@@ -12,26 +13,34 @@ import ua.com.fielden.platform.entity.factory.EntityFactory;
 import ua.com.fielden.platform.entity.factory.IMetaPropertyFactory;
 import ua.com.fielden.platform.entity.meta.MetaProperty;
 import ua.com.fielden.platform.entity.proxy.EntityProxyContainer;
+import ua.com.fielden.platform.entity.validation.DomainValidationConfig;
 import ua.com.fielden.platform.entity.validation.HappyValidator;
 import ua.com.fielden.platform.entity.validation.annotation.ValidationAnnotation;
 import ua.com.fielden.platform.error.Result;
 import ua.com.fielden.platform.error.Warning;
 import ua.com.fielden.platform.ioc.ApplicationInjectorFactory;
+import ua.com.fielden.platform.ioc.ObservableMutatorInterceptor;
 import ua.com.fielden.platform.reflection.Finder;
 import ua.com.fielden.platform.reflection.TitlesDescsGetter;
 import ua.com.fielden.platform.reflection.test_entities.*;
-import ua.com.fielden.platform.test.CommonTestEntityModuleWithPropertyFactory;
-import ua.com.fielden.platform.test.EntityModuleWithPropertyFactory;
+import ua.com.fielden.platform.test.CommonEntityTestIocModuleWithPropertyFactory;
+import ua.com.fielden.platform.test_entities.*;
 import ua.com.fielden.platform.types.Money;
 import ua.com.fielden.platform.types.either.Either;
 import ua.com.fielden.platform.types.either.Left;
 
 import java.lang.annotation.Annotation;
-import java.util.*;
+import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.List;
+import java.util.Set;
 
 import static java.lang.String.format;
 import static org.junit.Assert.*;
 import static ua.com.fielden.platform.entity.exceptions.EntityDefinitionException.*;
+import static ua.com.fielden.platform.test_utils.TestUtils.assertEmpty;
+import static ua.com.fielden.platform.test_utils.TestUtils.assertPresent;
 import static ua.com.fielden.platform.types.try_wrapper.TryWrapper.Try;
 
 /**
@@ -47,24 +56,16 @@ import static ua.com.fielden.platform.types.try_wrapper.TryWrapper.Try;
  */
 public class AbstractEntityTest {
     private boolean observedForIncorrectAttempt = false; // used
-    private final EntityModuleWithPropertyFactory module = new CommonTestEntityModuleWithPropertyFactory();
-    {
-        module.getDomainValidationConfig().setValidator(Entity.class, "firstProperty", new HappyValidator());
-        module.getDomainValidationConfig().setValidator(Entity.class, "doubles", new HappyValidator());
-        module.getDomainValidationConfig().setValidator(Entity.class, "number", new HappyValidator() {
-            @Override
-            public Result handle(final MetaProperty<Object> property, final Object newValue, final Set<Annotation> mutatorAnnotations) {
-                if (newValue != null && newValue.equals(35)) {
-                    return new Result(property, new Exception("Domain : Value 35 is not permitted."));
-                } else if (newValue != null && newValue.equals(77)) {
-                    return new Warning("DOMAIN validation : The value of 77 is dangerous.");
-                }
-                return super.handle(property, newValue, mutatorAnnotations);
-            }
-        });
-    }
 
-    private final Injector injector = new ApplicationInjectorFactory().add(module).getInjector();
+    private final Injector injector = new ApplicationInjectorFactory()
+            .add(new CommonEntityTestIocModuleWithPropertyFactory())
+            .add(new AbstractModule() {
+                @Override
+                protected void configure() {
+                    bind(DomainValidationConfig.class).toInstance(newDomainValidationConfig());
+                }
+            })
+            .getInjector();
     private final EntityFactory factory = injector.getInstance(EntityFactory.class);
     private Entity entity;
 
@@ -80,18 +81,18 @@ public class AbstractEntityTest {
 
     @Test
     public void testThatObservablePropertyMaintainsOriginalAndPrevValue() {
-        entity.getProperty("observableProperty").setPrevValue(new Double("0.0")); // setting the same value as the current one does not change prev-value
+        entity.getProperty("observableProperty").setPrevValue(BigDecimal.ZERO); // setting the same value as the current one does not change prev-value
         assertEquals("current value must be changed (original value null)", true, entity.getProperty("observableProperty").isChangedFromOriginal());
         assertEquals("current value must be changed (previous value null)", true, entity.getProperty("observableProperty").isChangedFromPrevious());
-        final Double newValue = new Double("22.0");
+        final var newValue = new BigDecimal("22.0");
         entity.setObservableProperty(newValue);
-        assertEquals("Prev property value is incorrect", new Double("0.0"), entity.getProperty("observableProperty").getPrevValue());
+        assertEquals("Prev property value is incorrect", BigDecimal.ZERO, entity.getProperty("observableProperty").getPrevValue());
         assertNull("Original property value is incorrect", entity.getProperty("observableProperty").getOriginalValue());
         assertEquals("Property change count is incorrect", 1, entity.getProperty("observableProperty").getValueChangeCount());
         assertEquals("current value must be changed (original value 1)", true, entity.getProperty("observableProperty").isChangedFromOriginal());
         assertEquals("current value must be changed (previous value 1)", true, entity.getProperty("observableProperty").isChangedFromPrevious());
 
-        entity.setObservableProperty(23.0);
+        entity.setObservableProperty(new BigDecimal("23.0"));
         assertEquals("Prev property value is incorrect", newValue, entity.getProperty("observableProperty").getPrevValue());
         assertNull("Original property value is incorrect", entity.getProperty("observableProperty").getOriginalValue());
         assertEquals("Property change count is incorrect", 2, entity.getProperty("observableProperty").getValueChangeCount());
@@ -108,12 +109,12 @@ public class AbstractEntityTest {
         // try to assign null
         entity.setFirstProperty(null);
         assertFalse("Property validation failed.", entity.getProperty("firstProperty").isValid());
-        assertEquals("Value assignment should have been prevented by the validator,", new Integer(60), entity.getFirstProperty());
+        assertEquals("Value assignment should have been prevented by the validator,", Integer.valueOf(60), entity.getFirstProperty());
         // try to assign value less than 50
         entity.setFirstProperty(23);
         assertFalse("Property validation failed.", entity.getProperty("firstProperty").isValid());
-        assertEquals("Value assignment should have been prevented by the validator,", new Integer(60), entity.getFirstProperty());
-        assertEquals("Incorrect value for last invalid value.", new Integer(23), entity.getProperty("firstProperty").getLastInvalidValue());
+        assertEquals("Value assignment should have been prevented by the validator,", Integer.valueOf(60), entity.getFirstProperty());
+        assertEquals("Incorrect value for last invalid value.", Integer.valueOf(23), entity.getProperty("firstProperty").getLastInvalidValue());
     }
 
     @Test
@@ -129,14 +130,14 @@ public class AbstractEntityTest {
     @Test
     public void final_property_for_non_persistent_entity_can_only_be_assigned_once() {
         assertTrue(entity.getProperty("finalProperty").isEditable());
-        entity.setFinalProperty(60.0);
+        entity.setFinalProperty(new BigDecimal("60.0"));
         assertTrue(entity.getProperty("finalProperty").isValid());
-        assertEquals(Double.valueOf(60.0), entity.getFinalProperty());
+        assertEquals(new BigDecimal("60.0"), entity.getFinalProperty());
         assertFalse(entity.getProperty("finalProperty").isEditable());
 
-        entity.setFinalProperty(31.0);
+        entity.setFinalProperty(new BigDecimal("31.0"));
         assertFalse(entity.getProperty("finalProperty").isValid());
-        assertEquals(Double.valueOf(60.0), entity.getFinalProperty());
+        assertEquals(new BigDecimal("60.0"), entity.getFinalProperty());
         assertFalse(entity.getProperty("finalProperty").isEditable());
     }
 
@@ -144,7 +145,7 @@ public class AbstractEntityTest {
     public void persistentOnly_final_property_for_non_persistent_entity_yields_invalid_definition() {
         final Either<Exception, EntityInvalidDefinition> result = Try(() -> factory.newEntity(EntityInvalidDefinition.class, "key", "desc"));
         assertTrue(result instanceof Left);
-        final Throwable rootCause = ExceptionUtils.getRootCause(((Left<Exception, EntityInvalidDefinition>) result).value);
+        final Throwable rootCause = ExceptionUtils.getRootCause(((Left<Exception, EntityInvalidDefinition>) result).value());
         assertTrue(rootCause instanceof EntityDefinitionException);
         assertEquals(format("Non-persistent entity [%s] has property [%s], which is incorrectly annotated with @Final(persistentOnly = true).", EntityInvalidDefinition.class.getSimpleName(), "firstProperty"),
                 rootCause.getMessage());
@@ -215,8 +216,8 @@ public class AbstractEntityTest {
 
     @Test
     public void testThatMetaInformationForCollectionalPropertiesIsDeterminedCorrectly() {
-        assertTrue("Property 'doubles' is not recognised as collectional.", entity.getProperty("doubles").isCollectional());
-        assertEquals("Meta-property for 'doubles' has incorrect collectional type.", Double.class, entity.getProperty("doubles").getPropertyAnnotationType());
+        assertTrue("Property 'bigDecimals' is not recognised as collectional.", entity.getProperty("bigDecimals").isCollectional());
+        assertEquals("Meta-property for 'bigDecimals' has incorrect collectional type.", BigDecimal.class, entity.getProperty("bigDecimals").getPropertyAnnotationType());
 
         assertTrue("Property 'entities' is not recognised as collectional.", entity.getProperty("entities").isCollectional());
         assertEquals("Meta-property for 'entities' has incorrect collectional type.", Entity.class, entity.getProperty("entities").getPropertyAnnotationType());
@@ -227,35 +228,35 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
+     * <li>validators are provided with correct values (this is actually done by {@link ObservableMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
     public void testThatCollectionalPropertySetterIsObservedAndValidated() {
-        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
-        assertEquals("Incorrect number of validators.", 2, doublesProperty.getValidators().size());
-        assertTrue("Should have domain validation.", doublesProperty.getValidators().containsKey(ValidationAnnotation.DOMAIN));
-        assertTrue("Should have not-null validation.", doublesProperty.getValidators().containsKey(ValidationAnnotation.REQUIRED));
-        assertNull("There should be no domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertNull("There should be no rquiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
-        entity.setDoubles(Arrays.asList(new Double[] { 2.0, 3.0 }));
-        entity.setDoubles(Arrays.asList(new Double[] { 2.0 }));
+        final MetaProperty<List<BigDecimal>> bigDecimalsProperty = entity.getProperty("bigDecimals");
+        assertEquals("Incorrect number of validators.", 2, bigDecimalsProperty.getValidators().size());
+        assertTrue("Should have domain validation.", bigDecimalsProperty.getValidators().containsKey(ValidationAnnotation.DOMAIN));
+        assertTrue("Should have not-null validation.", bigDecimalsProperty.getValidators().containsKey(ValidationAnnotation.REQUIRED));
+        assertEmpty("There should be no domain validation result at this stage.", bigDecimalsProperty.findValidationResult(ValidationAnnotation.DOMAIN));
+        assertEmpty("There should be no rquiredness validation result at this stage.", bigDecimalsProperty.findValidationResult(ValidationAnnotation.REQUIRED));
+        entity.setBigDecimals(List.of(new BigDecimal("2.0"), new BigDecimal("3.0")));
+        entity.setBigDecimals(List.of(new BigDecimal("2.0")));
 
-        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
-        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
-        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { 2.0, 3.0 }), doublesProperty.getPrevValue());
-        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
-        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertNull("Incorrect original value", bigDecimalsProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", bigDecimalsProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", List.of(new BigDecimal("2.0"), new BigDecimal("3.0")), bigDecimalsProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", bigDecimalsProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", bigDecimalsProperty.isDirty());
         assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
 
-        assertNotNull("There should be domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertTrue("Domain validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
-        assertNotNull("There should be a requiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
-        assertTrue("Requirendess validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
+        assertPresent("There should be domain validation result at this stage.", bigDecimalsProperty.findValidationResult(ValidationAnnotation.DOMAIN));
+        assertTrue("Domain validation result should be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
+        assertPresent("There should be a requiredness validation result at this stage.", bigDecimalsProperty.findValidationResult(ValidationAnnotation.REQUIRED));
+        assertTrue("Requirendess validation result should be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
 
-        entity.setDoubles(null);
-        assertFalse("Requiredness validation result should not be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
-        assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
+        entity.setBigDecimals(null);
+        assertFalse("Requiredness validation result should not be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
+        assertEquals("Incorrect size for bigDecimals", 1, entity.getBigDecimals().size());
     }
 
     /**
@@ -263,33 +264,33 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
+     * <li>validators are provided with correct values (this is actually done by {@link ObservableMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
     public void testThatCollectionalPropertyIncrementorIsObservedAndValidated() {
-        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
-        entity.setDoubles(Arrays.asList(new Double[] { -2.0, -3.0 }));
+        final MetaProperty<List<BigDecimal>> bigDecimalsProperty = entity.getProperty("bigDecimals");
+        entity.setBigDecimals(List.of(new BigDecimal("-2.0"), new BigDecimal("-3.0")));
 
-        entity.addToDoubles(2.0);
+        entity.addToBigDecimals(new BigDecimal("2.0"));
 
-        assertEquals("Incorrect size for doubles", 3, entity.getDoubles().size());
+        assertEquals("Incorrect size for bigDecimals", 3, entity.getBigDecimals().size());
 
-        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
-        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
-        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { -2.0, -3.0 }), doublesProperty.getPrevValue());
-        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
-        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertNull("Incorrect original value", bigDecimalsProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", bigDecimalsProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", List.of(new BigDecimal("-2.0"), new BigDecimal("-3.0")), bigDecimalsProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", bigDecimalsProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", bigDecimalsProperty.isDirty());
         assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
 
-        assertNotNull("There should be a domain validation result.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertNotNull("There should be requiredness validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
-        assertTrue("Requiredness validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
+        assertPresent("There should be a domain validation result.", bigDecimalsProperty.findValidationResult(ValidationAnnotation.DOMAIN));
+        assertPresent("There should be requiredness validation result at this stage.", bigDecimalsProperty.findValidationResult(ValidationAnnotation.REQUIRED));
+        assertTrue("Requiredness validation result should be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
 
-        entity.addToDoubles(null);
-        assertFalse("Requiredness validation result should not be successful.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
-        assertEquals("Incorrect size for doubles", 3, entity.getDoubles().size());
-        assertNull("Null value is expected for the last invalid value.", entity.getProperty("doubles").getLastInvalidValue());
+        entity.addToBigDecimals(null);
+        assertFalse("Requiredness validation result should not be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.REQUIRED).isSuccessful());
+        assertEquals("Incorrect size for bigDecimals", 3, entity.getBigDecimals().size());
+        assertNull("Null value is expected for the last invalid value.", entity.getProperty("bigDecimals").getLastInvalidValue());
     }
 
     /**
@@ -297,29 +298,29 @@ public class AbstractEntityTest {
      * <ul>
      * <li>meta-property has correct validators (determination of validators is done by {@link IMetaPropertyFactory})
      * <li>changes done through mutators are observed
-     * <li>validators are provided with correct values (this is actually done by {@link ValidationMutatorInterceptor})), which is checked indirectly
+     * <li>validators are provided with correct values (this is actually done by {@link ObservableMutatorInterceptor})), which is checked indirectly
      * </ul>
      */
     @Test
     public void testThatCollectionalPropertyDecrementorIsObservedAndValidated() {
-        final MetaProperty<List<Double>> doublesProperty = entity.getProperty("doubles");
-        entity.setDoubles(Arrays.asList(new Double[] { -2.0, -3.0 }));
+        final MetaProperty<List<BigDecimal>> bigDecimalsProperty = entity.getProperty("bigDecimals");
+        entity.setBigDecimals(List.of(new BigDecimal("-2.0"), new BigDecimal("-3.0")));
 
-        entity.removeFromDoubles(-2.0);
+        entity.removeFromBigDecimals(new BigDecimal("-2.0"));
 
-        assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
+        assertEquals("Incorrect size for bigDecimals", 1, entity.getBigDecimals().size());
 
-        assertNull("Incorrect original value", doublesProperty.getOriginalValue());
-        assertTrue("Incorrect isChangedFrom original.", doublesProperty.isChangedFromOriginal());
-        assertEquals("Incorrect previous value", Arrays.asList(new Double[] { -2.0, -3.0 }), doublesProperty.getPrevValue());
-        assertTrue("Incorrect isChangedFrom previous.", doublesProperty.isChangedFromPrevious());
-        assertTrue("Incorrect isDirty.", doublesProperty.isDirty());
+        assertNull("Incorrect original value", bigDecimalsProperty.getOriginalValue());
+        assertTrue("Incorrect isChangedFrom original.", bigDecimalsProperty.isChangedFromOriginal());
+        assertEquals("Incorrect previous value", List.of(new BigDecimal("-2.0"), new BigDecimal("-3.0")), bigDecimalsProperty.getPrevValue());
+        assertTrue("Incorrect isChangedFrom previous.", bigDecimalsProperty.isChangedFromPrevious());
+        assertTrue("Incorrect isDirty.", bigDecimalsProperty.isDirty());
         assertTrue("Incorrect isDirty for whole entity.", entity.isDirty());
 
-        assertNotNull("There should be domain validation result at this stage.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN));
-        assertTrue("Domain validation result should be successful.", doublesProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
-        assertNotNull("There should be requiredness validation result.", doublesProperty.getValidationResult(ValidationAnnotation.REQUIRED));
-        assertEquals("Incorrect size for doubles", 1, entity.getDoubles().size());
+        assertPresent("There should be domain validation result at this stage.", bigDecimalsProperty.findValidationResult(ValidationAnnotation.DOMAIN));
+        assertTrue("Domain validation result should be successful.", bigDecimalsProperty.getValidationResult(ValidationAnnotation.DOMAIN).isSuccessful());
+        assertPresent("There should be requiredness validation result.", bigDecimalsProperty.findValidationResult(ValidationAnnotation.REQUIRED));
+        assertEquals("Incorrect size for bigDecimals", 1, entity.getBigDecimals().size());
     }
 
     @Test
@@ -343,29 +344,29 @@ public class AbstractEntityTest {
     @Test
     public void testValidationAndSettingRestrictionInObservableMutator() {
         // preparing
-        final MetaProperty<Double> metaProperty = entity.getProperty("observableProperty");
+        final MetaProperty<BigDecimal> metaProperty = entity.getProperty("observableProperty");
         // 1. test the error recovery by the same value
-        entity.setObservableProperty(100.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
         entity.setObservableProperty(null);
-        entity.setObservableProperty(100.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
         assertTrue("the property after the error recovery have to be valid", metaProperty.isValid());
 
         // 2. test the error recovery by the different value
-        entity.setObservableProperty(100.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
         entity.setObservableProperty(null);
-        entity.setObservableProperty(101.0);
+        entity.setObservableProperty(new BigDecimal("101.0"));
         assertTrue("the property after the error recovery have to be valid", metaProperty.isValid());
 
         // 3. collectional property validation/observation tested in previous tests
 
         // 4. test simple property validation/observation invoking for different new/old values :
-        entity.setObservableProperty(100.0);
-        entity.setObservableProperty(101.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
+        entity.setObservableProperty(new BigDecimal("101.0"));
         assertTrue("the property after different value setted have to be valid", metaProperty.isValid());
 
         // 5. test simple property validation/observation not invoking for the same new/old values :
-        entity.setObservableProperty(100.0);
-        entity.setObservableProperty(100.0);
+        entity.setObservableProperty(new BigDecimal("100.0"));
+        entity.setObservableProperty(new BigDecimal("100.0"));
         assertTrue("the property after the same value setted have to be valid", metaProperty.isValid());
 
         // 6. test simple property validation/observation in case where it is initialised with NULL at construction time
@@ -426,13 +427,13 @@ public class AbstractEntityTest {
         assertEquals("Incorrect title", "First Property", firstPropertyMetaProp.getTitle());
         assertEquals("Incorrect desc", "used for testing", firstPropertyMetaProp.getDesc());
 
-        final MetaProperty<Double> observablePropertyMetaProp = entity.getProperty("observableProperty");
+        final MetaProperty<BigDecimal> observablePropertyMetaProp = entity.getProperty("observableProperty");
         assertTrue("Should be requried", observablePropertyMetaProp.isRequired());
         assertTrue("Should be editable", observablePropertyMetaProp.isEditable());
         assertEquals("Incorrect title", "Observable Property", observablePropertyMetaProp.getTitle());
         assertEquals("Incorrect desc", "Observable Property", observablePropertyMetaProp.getDesc());
 
-        final MetaProperty<Double> finalPropertyMetaProp = entity.getProperty("finalProperty");
+        final MetaProperty<BigDecimal> finalPropertyMetaProp = entity.getProperty("finalProperty");
         assertFalse("Should not bevisible", finalPropertyMetaProp.isVisible());
 
         final MetaProperty<String> keyMetaProp = entity.getProperty("key");
@@ -549,7 +550,7 @@ public class AbstractEntityTest {
         } finally {
             assertFalse("The 'number' property have to be invalid.", property.isValid());
             assertTrue("DynamicValidator have to be not null after any Result has been thrown.", property.containsDynamicValidator());
-            assertNotNull("The result for DYNAMIC validator have to be not null.", property.getValidationResult(ValidationAnnotation.DYNAMIC));
+            assertPresent("The result for DYNAMIC validator have to be not null.", property.findValidationResult(ValidationAnnotation.DYNAMIC));
             assertFalse("The result for DYNAMIC validator have to be not successful.", property.getValidationResult(ValidationAnnotation.DYNAMIC).isSuccessful());
             assertEquals("The value in the 'number' property is not correct.", (Object) 10, entity.getNumber());
         }
@@ -632,11 +633,11 @@ public class AbstractEntityTest {
         final CorrectEntityWithDynamicEntityKey compositeEntity = factory.newEntity(CorrectEntityWithDynamicEntityKey.class, 12L);
         assertNotNull("Composite should not be null.", compositeEntity.getKey());
 
-        final Long orig1 = compositeEntity.getProperty1();
-        final Long orig2 = compositeEntity.getProperty2();
+        final Integer orig1 = compositeEntity.getProperty1();
+        final Integer orig2 = compositeEntity.getProperty2();
 
-        compositeEntity.setProperty1(1L);
-        compositeEntity.setProperty2(2L);
+        compositeEntity.setProperty1(1);
+        compositeEntity.setProperty2(2);
 
         compositeEntity.restoreToOriginal();
         assertEquals("Could not restore to original.", orig1, compositeEntity.getProperty1());
@@ -700,7 +701,7 @@ public class AbstractEntityTest {
         entity.setKey("key");
         entity.setDesc("description");
         entity.setMoney(new Money("23.25"));
-        entity.setAdditionalProperty(23.0);
+        entity.setAdditionalProperty(new BigDecimal("23.0"));
 
         final Entity copy = entity.copy(Entity.class);
 
@@ -715,36 +716,36 @@ public class AbstractEntityTest {
     @Test
     public void test_copy_for_entities_with_dynamic_key() {
         final CorrectEntityWithDynamicEntityKey one = factory.newEntity(CorrectEntityWithDynamicEntityKey.class, 1L);
-        one.property1 = 38L;
-        one.property2 = 98L;
+        one.setProperty1(38);
+        one.setProperty2(98);
         final DynamicEntityKey keyOne = new DynamicEntityKey(one);
         one.setKey(keyOne);
 
         Object[] values = one.getKey().getKeyValues();
         assertEquals("Incorrect number of values.", 2, values.length);
-        assertEquals("Incorrect value for the first key property.", 38L, values[0]);
-        assertEquals("Incorrect value for the second key property.", 98L, values[1]);
-        assertEquals("Incorrect value for the first key property.", (Long) 38L, one.getProperty1());
-        assertEquals("Incorrect value for the second key property.", (Long) 98L, one.getProperty2());
+        assertEquals("Incorrect value for the first key property.", 38, values[0]);
+        assertEquals("Incorrect value for the second key property.", 98, values[1]);
+        assertEquals("Incorrect value for the first key property.", Integer.valueOf(38), one.getProperty1());
+        assertEquals("Incorrect value for the second key property.", Integer.valueOf(98), one.getProperty2());
 
         final CorrectEntityWithDynamicEntityKey copy = one.copy(CorrectEntityWithDynamicEntityKey.class);
 
         values = copy.getKey().getKeyValues();
         assertEquals("Incorrect number of values.", 2, values.length);
-        assertEquals("Incorrect value for the first key property.", 38L, values[0]);
-        assertEquals("Incorrect value for the second key property.", 98L, values[1]);
-        assertEquals("Incorrect value for the first key property.", (Long) 38L, copy.getProperty1());
-        assertEquals("Incorrect value for the second key property.", (Long) 98L, copy.getProperty2());
+        assertEquals("Incorrect value for the first key property.", 38, values[0]);
+        assertEquals("Incorrect value for the second key property.", 98, values[1]);
+        assertEquals("Incorrect value for the first key property.", Integer.valueOf(38), copy.getProperty1());
+        assertEquals("Incorrect value for the second key property.", Integer.valueOf(98), copy.getProperty2());
 
-        copy.setProperty1(40L);
-        copy.setProperty2(100L);
+        copy.setProperty1(40);
+        copy.setProperty2(100);
 
         values = copy.getKey().getKeyValues();
         assertEquals("Incorrect number of values.", 2, values.length);
-        assertEquals("Incorrect value for the first key property.", 40L, values[0]);
-        assertEquals("Incorrect value for the second key property.", 100L, values[1]);
-        assertEquals("Incorrect value for the first key property.", (Long) 40L, copy.getProperty1());
-        assertEquals("Incorrect value for the second key property.", (Long) 100L, copy.getProperty2());
+        assertEquals("Incorrect value for the first key property.", 40, values[0]);
+        assertEquals("Incorrect value for the second key property.", 100, values[1]);
+        assertEquals("Incorrect value for the first key property.", Integer.valueOf(40), copy.getProperty1());
+        assertEquals("Incorrect value for the second key property.", Integer.valueOf(100), copy.getProperty2());
     }
 
     @Test
@@ -1085,7 +1086,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithPrecision> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithPrecision.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithPrecision> left = (Left<Exception, EntityWithInvalidMoneyPropWithPrecision>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithPrecision.class.getName()), ex.getMessage());
     }
@@ -1095,7 +1096,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithScale.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithScale>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithScale.class.getName()), ex.getMessage());
     }
@@ -1105,7 +1106,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithNegativePrecisionAndPositiveScale.class.getName()), ex.getMessage());
     }
@@ -1115,7 +1116,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale> left = (Left<Exception, EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_FOR_PRECITION_AND_SCALE_MSG, "numericMoney", EntityWithInvalidMoneyPropWithPositivePrecisionAndNegativeScale.class.getName()), ex.getMessage());
     }
@@ -1125,7 +1126,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidMoneyPropWithLength> result = Try(() -> factory.newByKey(EntityWithInvalidMoneyPropWithLength.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidMoneyPropWithLength> left = (Left<Exception, EntityWithInvalidMoneyPropWithLength>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_OF_PARAM_LENGTH_MSG, "numericMoney", EntityWithInvalidMoneyPropWithLength.class.getName()), ex.getMessage());
     }
@@ -1135,7 +1136,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidIntegerProp> result = Try(() -> factory.newByKey(EntityWithInvalidIntegerProp.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidIntegerProp> left = (Left<Exception, EntityWithInvalidIntegerProp>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_VALUES_FOR_PRECITION_AND_SCALE_MSG, "numericInteger", EntityWithInvalidIntegerProp.class.getName()), ex.getMessage());
     }
@@ -1145,7 +1146,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidStringPropWithTrailingZeros> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithTrailingZeros.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidStringPropWithTrailingZeros> left = (Left<Exception, EntityWithInvalidStringPropWithTrailingZeros>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithTrailingZeros.class.getName()), ex.getMessage());
     }
@@ -1155,7 +1156,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidStringPropWithPrecision> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithPrecision.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidStringPropWithPrecision> left = (Left<Exception, EntityWithInvalidStringPropWithPrecision>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithPrecision.class.getName()), ex.getMessage());
     }
@@ -1165,7 +1166,7 @@ public class AbstractEntityTest {
         final Either<Exception, EntityWithInvalidStringPropWithScale> result = Try(() -> factory.newByKey(EntityWithInvalidStringPropWithScale.class, "some key"));
         assertTrue(result instanceof Left);
         final Left<Exception, EntityWithInvalidStringPropWithScale> left = (Left<Exception, EntityWithInvalidStringPropWithScale>) result;
-        final Throwable ex = left.value.getCause().getCause();
+        final Throwable ex = left.value().getCause().getCause();
         assertTrue(ex instanceof EntityDefinitionException);
         assertEquals(format(INVALID_USE_OF_NUMERIC_PARAMS_MSG, "stringProp", EntityWithInvalidStringPropWithScale.class.getName()), ex.getMessage());
     }
@@ -1214,6 +1215,24 @@ public class AbstractEntityTest {
     public void default_implementation_for_isDirty_does_not_thorow_exceptions_for_instrumented_entities() {
         final Entity entity = factory.newEntity(Entity.class);
         assertTrue(entity.isDirty());
+    }
+
+    private static DomainValidationConfig newDomainValidationConfig() {
+        final var config = new DomainValidationConfig();
+        config.setValidator(Entity.class, "firstProperty", new HappyValidator());
+        config.setValidator(Entity.class, "bigDecimals", new HappyValidator());
+        config.setValidator(Entity.class, "number", new HappyValidator() {
+            @Override
+            public Result handle(final MetaProperty<Object> property, final Object newValue, final Set<Annotation> mutatorAnnotations) {
+                if (newValue != null && newValue.equals(35)) {
+                    return new Result(property, new Exception("Domain : Value 35 is not permitted."));
+                } else if (newValue != null && newValue.equals(77)) {
+                    return new Warning("DOMAIN validation : The value of 77 is dangerous.");
+                }
+                return super.handle(property, newValue, mutatorAnnotations);
+            }
+        });
+        return config;
     }
 
 }
